--- a/IntelliYield/aplicativo/templates/index.html
+++ b/IntelliYield/aplicativo/templates/index.html
@@ -13,7 +13,8 @@
         <h1>INTELLIYIELD</h1>
     </div>
     <div id="menu">
-        <a href="input"><button>Começar</button></a>
+        <a href="input/rec"><button>Recomendação</button></a>
+        <a href="input/comp"><button>Compatibilidade</button></a>
     </div>
 
 </body>
