--- a/IntelliYield/aplicativo/templates/result_rec.html
+++ b/IntelliYield/aplicativo/templates/result_rec.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="header">
-        <h1>INTELLIYIELD</h1>
+        <a href="{% url 'index' %}"><button><h1>INTELLIYIELD</h1></button></a>
+        <a href="{% url 'register' %}"><button>Cadastro</button></a>
+        <a href="{% url 'login' %}"><button>Login</button></a>
     </div>
     <div id="resultado">
         <p>Predição de plantio: {{ predicoes }}</p>
@@ -20,11 +22,8 @@
             <p>{{ detalhesknn }}</p>
             <p>{{ detalhessvc }}</p>
             <p>{{ detalheslda }}</p>
-            
         </div>
     </div>
-    
-    
 </body>
 
 </html>
