--- a/IntelliYield/aplicativo/templates/user_input_rec.html
+++ b/IntelliYield/aplicativo/templates/user_input_rec.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="header">
-        <h1>INTELLIYIELD</h1>
+        <a href="{% url 'index' %}"><button><h1>INTELLIYIELD</h1></button></a>
+        <a href="{% url 'register' %}"><button>Cadastro</button></a>
+        <a href="{% url 'login' %}"><button>Login</button></a>
     </div>
     <div id="formulario">
         <form method="post">
