--- a/IntelliYield/aplicativo/templates/index.html
+++ b/IntelliYield/aplicativo/templates/index.html
@@ -11,8 +11,9 @@
 <body>
     <div id="header">
         <h1>INTELLIYIELD</h1>
-        <a href="{% url 'register' %}"><button>Cadastro</button></a>
-        <a href="{% url 'login' %}"><button>Login</button></a>
+        <a href="{% url 'perfil' %}"><button><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
+          </svg></button></a>
         {% if user.is_authenticated %}
         <p>Olá, {{ user.username }}! <a href="{% url 'user_logout' %}">Sair</a></p>
         {% else %}
