--- a/IntelliYield/aplicativo/templates/perfil.html
+++ b/IntelliYield/aplicativo/templates/perfil.html
@@ -2,10 +2,12 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Registro</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
     <div id="header">
         <h1>INTELLIYIELD</h1>
@@ -17,17 +19,16 @@
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z" />
                 </svg>
             </button></a>
-        <a href="{% url 'perfil' %}"><button><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
-                    fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
-                </svg></button>
-        </a>
-    </div>tro</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrar</button>
-    </form>
-    <a href="{% url 'login' %}">Já tem uma conta? Faça o login aqui</a>
+    </div>
+    <div id="menu">
+        <a href="{% url 'register' %}"><button>Cadastro</button></a>
+        <a href="{% url 'login' %}"><button>Login</button></a>
+        <a href="{% url 'user_logout' %}"><button>Logout</button></a>
+        <a href="{% url 'editarConta' %}"><button>Editar Conta</button></a>
+        <a href="{% url 'excluirConta' %}"><button>Excluir Conta</button></a>
+
+    </div>
+
 </body>
+
 </html>
