--- a/IntelliYield/aplicativo/templates/user_input_rec.html
+++ b/IntelliYield/aplicativo/templates/user_input_rec.html
@@ -10,9 +10,20 @@
 
 <body>
     <div id="header">
-        <a href="{% url 'index' %}"><button><h1>INTELLIYIELD</h1></button></a>
-        <a href="{% url 'register' %}"><button>Cadastro</button></a>
-        <a href="{% url 'login' %}"><button>Login</button></a>
+        <h1>INTELLIYIELD</h1>
+        <a href="{% url 'index' %}"><button>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor"
+                    class="bi bi-house-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z" />
+                    <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z" />
+                </svg>
+            </button></a>
+        <a href="{% url 'perfil' %}"><button><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40"
+                    fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                    <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+                </svg></button>
+        </a>
     </div>
     <div id="formulario">
         <form method="post">
