--- a/IntelliYield/aplicativo/templates/user_input_rec.html
+++ b/IntelliYield/aplicativo/templates/user_input_rec.html
@@ -25,7 +25,7 @@
                 </svg></button>
         </a>
     </div>
-    <div id="formulario">
+    <div class="formulario">
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
