--- a/IntelliYield/aplicativo/templates/register.html
+++ b/IntelliYield/aplicativo/templates/register.html
@@ -2,10 +2,12 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Registro</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
     <div id="header">
         <h1>INTELLIYIELD</h1>
@@ -22,12 +24,16 @@
                     <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                 </svg></button>
         </a>
-    </div>tro</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Registrar</button>
-    </form>
-    <a href="{% url 'login' %}">Já tem uma conta? Faça o login aqui</a>
+    </div>
+    <div class="formulario">
+        <h2>Registro</h2>
+        <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit">Registrar</button>
+        </form>
+        <a href="{% url 'login' %}">Já tem uma conta? Faça o login aqui</a>
+    </div>
 </body>
+
 </html>
