--- a/IntelliYield/aplicativo/templates/registration/login.html
+++ b/IntelliYield/aplicativo/templates/registration/login.html
@@ -25,16 +25,18 @@
                 </svg></button>
         </a>
     </div>
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        <label for="username">Nome de usuário:</label>
-        <input type="text" name="username" id="username" required><br>
-        <label for="password">Senha:</label>
-        <input type="password" name="password" id="password" required><br>
-        <button type="submit">Entrar</button>
-    </form>
-    <a href="{% url 'register' %}">Ainda não tem uma conta? Registre-se aqui</a>
+    <div class="formulario">
+        <h2>Login</h2>
+        <form method="post">
+            {% csrf_token %}
+            <label for="username">Nome de usuário:</label>
+            <input type="text" name="username" id="username" required><br>
+            <label for="password">Senha:</label>
+            <input type="password" name="password" id="password" required><br>
+            <button type="submit">Entrar</button>
+        </form>
+        <a href="{% url 'register' %}">Ainda não tem uma conta? Registre-se aqui</a>
+    </div>
 </body>
 
 </html>
